01_server_security/iptables/00-iptables.up.rules/20150916_iptables.up.rules
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*mangle
:PREROUTING ACCEPT [35:8271]
:INPUT ACCEPT [22:1874]
:FORWARD ACCEPT [4:358]
:OUTPUT ACCEPT [23:4511]
:POSTROUTING ACCEPT [27:4869]
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -d 211.224.204.168/32 -j DNAT --to-destination 10.0.0.60
-A PREROUTING -p tcp -d 211.224.204.169/32 -j DNAT --to-destination 10.0.0.61
-A PREROUTING -p tcp -d 211.224.204.175/32 -j DNAT --to-destination 10.0.0.202
-A PREROUTING -p tcp -m tcp -d 211.224.204.171/32 -j DNAT --to-destination 10.0.0.25
-A PREROUTING -p tcp -m tcp -d 211.224.204.172/32 -j DNAT --to-destination 10.0.0.70
-A PREROUTING -p tcp -m tcp -d 211.224.204.176/32 -j DNAT --to-destination 10.0.0.62
-A PREROUTING -p tcp -m tcp -d 211.224.204.177/32 -j DNAT --to-destination 10.0.0.63
-A PREROUTING -p tcp -m tcp -d 211.224.204.179/32 -j DNAT --to-destination 10.0.0.12
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 80   -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 3306 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 5000 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 5432 -j DNAT --to-destination 10.0.0.72
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 6080 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 8773 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 8774 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 8776 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 9292 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 9696 -j DNAT --to-destination 10.0.0.101
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 2222 -j DNAT --to-destination 10.0.0.100:2222
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 2333 -j DNAT --to-destination 10.0.0.100:2333
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 8808 -j DNAT --to-destination 10.0.0.100:8808
-A PREROUTING -p tcp -m tcp -d 211.224.204.173/32 --dport 22   -j DNAT --to-destination 10.0.0.71:22
-A PREROUTING -p tcp -m tcp -d 211.224.204.173/32 --dport 8080 -j DNAT --to-destination 10.0.0.71:8080
-A PREROUTING -p tcp -m tcp -d 211.224.204.174/32 --dport 22   -j DNAT --to-destination 10.0.0.201:22
-A PREROUTING -p tcp -m tcp -d 211.224.204.174/32 --dport 80   -j DNAT --to-destination 10.0.0.201:80
-A PREROUTING -p tcp -m tcp -d 211.224.204.160/32 --dport 10443 -j DNAT --to-destination 10.0.0.233
# -A PREROUTING -p tcp -m tcp -d 211.224.204.180/32 -j DNAT --to-destination 10.0.0.54 -A PREROUTING -p tcp -m tcp -d 211.224.204.178/32 -j DNAT --to-destination 10.0.0.207
-A POSTROUTING -o em2 -j MASQUERADE
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*filter
:OUTPUT ACCEPT [0:0]
:INPUT DROP [0:0]
:filter_hackers - [0:0]
:FORWARD DROP [0:0]
:allowed_sites - [0:0]
-A INPUT -j filter_hackers
-A INPUT -j allowed_sites
-A INPUT -j LOG
-A INPUT -j DROP
-A FORWARD -j filter_hackers
-A FORWARD -j allowed_sites
-A FORWARD -j LOG
-A FORWARD -j DROP
-A OUTPUT -p tcp ! --syn -m state --state NEW -j DROP
# DROP INVALID SYN PACKETS
-A filter_hackers -f -j DROP
-A filter_hackers -p tcp ! --syn -m state --state NEW -j DROP
-A filter_hackers -p tcp --tcp-flags ALL ALL -j DROP
-A filter_hackers -p tcp --tcp-flags ALL NONE -j DROP
-A filter_hackers -p tcp --tcp-flags ALL ACK,RST,SYN,FIN -j DROP
-A filter_hackers -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A filter_hackers -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A filter_hackers -m state --state INVALID -j DROP
-A filter_hackers -p tcp -m tcp --sport 3502 -j DROP
-A filter_hackers -p tcp -m tcp --dport 3502 -j DROP
-A filter_hackers -s 23.30.0.0/15 -j DROP
-A filter_hackers -s 43.255.191.0/24 -j DROP
-A filter_hackers -s 58.26.249.0/24 -j DROP
-A filter_hackers -s 58.218.0.0/16 -i em2 -j DROP
-A filter_hackers -s 58.219.0.0/16 -i em2 -j DROP
-A filter_hackers -s 59.126.128.0/17 -i em2 -j DROP
-A filter_hackers -s 61.0.0.0/8 -i em2 -j DROP
-A filter_hackers -s 91.189.91.0/24 -i em2 -j DROP
-A filter_hackers -s 103.0.0.0/8 -i em2 -j DROP
-A filter_hackers -s 103.41.124.0/24 -i em2 -j DROP
-A filter_hackers -s 114.42.209.0/24 -i em2 -j DROP
-A filter_hackers -s 115.224.0.0/12 -i em2 -j DROP
-A filter_hackers -s 116.255.128.0/17 -i em2 -j DROP
-A filter_hackers -s 167.114.0.0/16 -j DROP
-A filter_hackers -s 183.128.0.0/11 -j DROP
-A filter_hackers -d 103.0.0.0/8 -j DROP
-A filter_hackers -s 222.184.0.0/13 -j DROP
-A allowed_sites -s 58.26.249.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 121.134.209.128/25 -i em2 -j ACCEPT
-A allowed_sites -s 210.183.241.128/25 -i em2 -j ACCEPT
-A allowed_sites -s 211.224.204.128/25 -i em2 -j ACCEPT
-A allowed_sites -s 220.123.31.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 222.112.0.0/13 -i em2 -j ACCEPT
-A allowed_sites -s 221.151.188.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 175.209.35.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 175.223.26.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 125.138.98.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 110.70.51.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 110.70.50.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 192.168.0.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 192.168.1.0/31 -i em2 -j ACCEPT
-A allowed_sites -s 110.70.50.0/24 -i em2 -j ACCEPT
-A allowed_sites -s 10.0.0.0/24 -i em1 -j ACCEPT
-A allowed_sites -d 10.0.0.0/24 -i lo -j ACCEPT
-A allowed_sites -d 211.224.204.0/24 -i lo -j ACCEPT
-A allowed_sites -d 10.0.0.0/24 -i em2 -j ACCEPT
-A allowed_sites -m conntrack -i em2 -j ACCEPT  --ctstate NEW 
-A allowed_sites -m conntrack -i em2 -j ACCEPT  --ctstate RELATED,ESTABLISHED
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
